added landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessible Bank</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Accessible Bank</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    html {
+      background-color: #008288;
+      color: white;
+    }
+
+    body {
+      font-family: system-ui;
+      margin: 0;
+    }
+
+    #splash {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      height: 100dvh;
+    }
+
+    h1 {
+      font-weight: normal;
+      font-size: 0.75rem;
+      position: fixed;
+      bottom: 20px;
+      text-align: center;
+      width: 100%;
+    }
+  </style>
+</head>
+
+<body>
+  <main>
+    <div id="splash">
+      <a href="./pages/onboarding.html">
+        <img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608532/learnhtmlcss/my-bank/logo.png"
+          width="250" height="250" alt="MyBank logo" />
+      </a>
+    </div>
+    <h1>World's Largest and Most Trusted Bank</h1>
+  </main>
+</body>
+
 </html>
