--- a/pages/sigin.html
+++ b/pages/sigin.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="../index.css" />
+	<link rel="stylesheet" href="./styles/signin.css" />
 	<title>Sign in</title>
 </head>
 
@@ -32,11 +33,12 @@
 
 			<div class="form-line">
 				<label for="password">Password</label>
-				<input class="input" type="password" id="password" placeholder="*******" autocomplete="current-password" />
+				<input class="input" type="password" id="password" placeholder="*******"
+					autocomplete="current-password" />
 			</div>
 
 			<div class="form-buttons">
-				<a href="#" class="ax-button btn btn--block btn--link">Recover password</a>
+				<a href="#" class="ax-button btn btn--block btn--link recover-password">Recover password</a>
 				<input type="submit" value="Sign in" class="ax-button btn btn--block btn--raised" />
 			</div>
 		</form>
