--- a/pages/sigin.html
+++ b/pages/sigin.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">
 			<div id="header">
-				<a href="#" class="back">
+				<a href="onboarding.html" class="back">
 					<span class="sr-only">Back</span>
 				</a>
 				<h1 id="title-signin" class="page-title">Sign in</h1>
@@ -21,7 +21,7 @@
 		</div>
 	</header>
 	<main id="main-with-small-header" class="container">
-		<form action="#" aria-labelledby="title-signin">
+		<form action="dashboard.html" aria-labelledby="title-signin">
 			<div class="form-line">
 				<label for="phone-number">Phone number</label>
 				<div class="input-fixed-icon">
@@ -33,12 +33,12 @@
 
 			<div class="form-line">
 				<label for="password">Password</label>
-				<input class="input" type="password" id="password" placeholder="*******"
-					autocomplete="current-password" />
+				<input class="input" type="password" id="password" placeholder="*******" autocomplete="current-password" />
 			</div>
 
 			<div class="form-buttons">
-				<a href="#" class="ax-button btn btn--block btn--link recover-password">Recover password</a>
+				<a href="dashboard.html" class="ax-button btn btn--block btn--link recover-password">Recover
+					password</a>
 				<input type="submit" value="Sign in" class="ax-button btn btn--block btn--raised" />
 			</div>
 		</form>
