--- a/pages/services.html
+++ b/pages/services.html
@@ -2,13 +2,97 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="../index.css" />
+	<title>Services</title>
 </head>
 
 <body>
-
+	<header id="app-header">
+		<h1>Services</h1>
+		<!-- Wrap input with form -->
+		<form action="#">
+			<div class="container">
+				<label for="search-services" class="sr-only">Search services</label>
+				<input type="search" class="input input-search" id="search-services" placeholder="Search" />
+			</div>
+		</form>
+	</header>
+	<main id="layout-page-overlay">
+		<div class="container">
+			<!-- Add section landmark -->
+			<section>
+				<h2 class="title">Transfer money</h2>
+				<ul class="items">
+					<li>
+						<a href="#" class="item">
+							<img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608533/learnhtmlcss/my-bank/users.svg"
+								alt="" class="avatar" height="24" width="24" />
+							<p class="item-name">To a contact</p>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="item">
+							<img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608527/learnhtmlcss/my-bank/card.svg"
+								alt="" class="avatar" height="24" width="24" />
+							<p class="item-name">To a bank card</p>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="item">
+							<img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608529/learnhtmlcss/my-bank/globe.svg"
+								alt="" class="avatar" height="24" width="24" />
+							<p class="item-name">To another country</p>
+						</a>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2 class="title">Payments</h2>
+				<ul class="items">
+					<li>
+						<a href="#" class="item">
+							<img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608531/learnhtmlcss/my-bank/invoice.svg"
+								width="24" height="24" alt="" class="avatar" />
+							<p class="item-name">Invoices</p>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="item">
+							<img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608533/learnhtmlcss/my-bank/phone.svg"
+								width="24" height="24" alt="" class="avatar" />
+							<p class="item-name">Mobile connection</p>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="item">
+							<img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608532/learnhtmlcss/my-bank/money.svg"
+								width="24" height="24" alt="" class="avatar" />
+							<p class="item-name">Taxes, fines, and duties</p>
+						</a>
+					</li>
+				</ul>
+			</section>
+		</div>
+	</main>
+	<div id="nav-spacer"></div>
+	<nav>
+		<a href="#" class="nav-item">
+			<img src="https://mybank.learnhtmlcss.online/assets/nav-home.svg" alt="Home" width="25" height="24" />
+		</a>
+		<a href="#" class="nav-item">
+			<img src="https://mybank.learnhtmlcss.online/assets/nav-services-active.svg" alt="Services" width="24"
+				height="24" />
+		</a>
+		<a href="#" class="nav-item">
+			<img src="https://mybank.learnhtmlcss.online/assets/nav-transactions.svg" alt="Transactions" width="24"
+				height="24" />
+		</a>
+		<a href="#" class="nav-item">
+			<img src="https://mybank.learnhtmlcss.online/assets/nav-profile.svg" alt="Profile" width="24" height="24" />
+		</a>
+	</nav>
 </body>
 
 </html>
