--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -19,15 +19,17 @@
 	</main>
 	<div id="nav-spacer"></div>
 	<nav>
-		<a href="#" class="nav-item">
-			<img src="https://mybank.learnhtmlcss.online//assets/nav-home.svg" alt="Home" width="24" height="24" /></a>
-		<a href="#" class="nav-item">
-			<img src="https://mybank.learnhtmlcss.online/assets/nav-services-active.svg" alt="Services" width="24"
+		<a href="dashboard.html" class="nav-item">
+			<img src="https://mybank.learnhtmlcss.online//assets/nav-home-active.svg" alt="Home" width="24"
 				height="24" /></a>
-		<a href="#" class="nav-item"><img src="https://mybank.learnhtmlcss.online//assets/nav-transactions.svg"
-				alt="Transactions" width="24" height="24" /></a>
-		<a href="#" class="nav-item"><img src="https://mybank.learnhtmlcss.online//assets/nav-profile.svg" alt="Profile"
-				width="24" height="24" /></a>
+		<a href="services.html" class="nav-item">
+			<img src="https://mybank.learnhtmlcss.online/assets/nav-services.svg" alt="Services" width="24"
+				height="24" /></a>
+		<a href="transactions.html" class="nav-item"><img
+				src="https://mybank.learnhtmlcss.online//assets/nav-transactions.svg" alt="Transactions" width="24"
+				height="24" /></a>
+		<a href="profile.html" class="nav-item"><img src="https://mybank.learnhtmlcss.online//assets/nav-profile.svg"
+				alt="Profile" width="24" height="24" /></a>
 	</nav>
 </body>
 
