--- a/pages/services.html
+++ b/pages/services.html
@@ -78,18 +78,18 @@
 	</main>
 	<div id="nav-spacer"></div>
 	<nav>
-		<a href="#" class="nav-item">
+		<a href="dashboard.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-home.svg" alt="Home" width="25" height="24" />
 		</a>
-		<a href="#" class="nav-item">
+		<a href="services.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-services-active.svg" alt="Services" width="24"
 				height="24" />
 		</a>
-		<a href="#" class="nav-item">
+		<a href="transactions.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-transactions.svg" alt="Transactions" width="24"
 				height="24" />
 		</a>
-		<a href="#" class="nav-item">
+		<a href="profile.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-profile.svg" alt="Profile" width="24" height="24" />
 		</a>
 	</nav>
