added actions grid

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<h1>Dashboard</h1>
 			<div id="cards">
-				<div class="card card--dark">
+				<div class="card card--dark" tabindex="0">
 					<div class="card-container">
 						<p class="card-amount">
 							<data value="5230">$5,230.00</data>
@@ -27,7 +27,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card--light">
+				<div class="card card--light" tabindex="0">
 					<div class="card-container">
 						<p class="card-amount">
 							<data value="892.53">$892.53</data>
@@ -130,15 +130,15 @@
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-home-active.svg" alt="Home" width="25"
 				height="24" />
 		</a>
-		<a href="#" class="nav-item">
+		<a href="services.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-services.svg" alt="Services" width="24"
 				height="24" />
 		</a>
-		<a href="#" class="nav-item">
+		<a href="transactions.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-transactions.svg" alt="Transactions" width="24"
 				height="24" />
 		</a>
-		<a href="#" class="nav-item">
+		<a href="profile.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-profile.svg" alt="Profile" width="24" height="24" />
 		</a>
 	</nav>
