--- a/pages/transactions.html
+++ b/pages/transactions.html
@@ -78,7 +78,7 @@
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-services.svg" alt="Services" width="24"
 				height="24" />
 		</a>
-		<a href="transactions.html" class="nav-item">
+		<a href="#" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-transactions-active.svg" alt="Transactions"
 				width="24" height="24" />
 		</a>
