--- a/pages/profile.html
+++ b/pages/profile.html
@@ -102,7 +102,7 @@
             <img src="https://mybank.learnhtmlcss.online/assets/nav-transactions.svg" alt="Transactions" width="24"
                 height="24" />
         </a>
-        <a href="profile.html" class="nav-item">
+        <a href="#" class="nav-item">
             <img src="https://mybank.learnhtmlcss.online/assets/nav-profile-active.svg" alt="Profile" width="24"
                 height="24" />
         </a>
