--- a/pages/services.html
+++ b/pages/services.html
@@ -81,7 +81,7 @@
 		<a href="dashboard.html" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-home.svg" alt="Home" width="25" height="24" />
 		</a>
-		<a href="services.html" class="nav-item">
+		<a href="#" class="nav-item">
 			<img src="https://mybank.learnhtmlcss.online/assets/nav-services-active.svg" alt="Services" width="24"
 				height="24" />
 		</a>
