added inline style

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -15,7 +15,7 @@
             <img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608533/learnhtmlcss/my-bank/person-5.png"
                 alt="Sam Doe profile" width="80" height="80" />
             <h1>Sam Doe</h1>
-            <button class="ax-button" id="header-profile-top-right">
+            <button class="ax-button" id="header-profile-top-right" style="position: absolute; top: 16px; right: 16px">
                 <img src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608529/learnhtmlcss/my-bank/cog.svg"
                     alt="Settings" />
             </button>
